# coding: utf-8
[metadata]
name = hostedpi
version = 0.1.0
description = Python interface to the Mythic Beasts Hosted Pi API
long_description = file: description.rst
author = The piwheels team
author_email = ben@bennuttall.com
url = https://hostedpi.readthedocs.io/
project_urls =
    Documentation = https://hostedpi.readthedocs.io/
    Source Code = https://github.com/piwheels/hostedpi
    Issue Tracker = https://github.com/piwheels/hostedpi/issues
keywords = raspberrypi, mythicbeasts, picloud, piwheels
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: BSD License
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.5
install_requires =
    setuptools
    requests

[options.extras_require]
test =
    pytest
    coverage
    mock
    pylint
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    hostedpi = hostedpi.cli:main
