# coding: utf-8
[metadata]
name = hostedpi
version = attr: hostedpi.__version__
description = Python interface to the Mythic Beasts Hosted Pi API
long_description = file: README.rst
author = The piwheels team
author_email = ben@bennuttall.com
url = https://hostedpi.readthedocs.io/
project_urls =
    Documentation = https://hostedpi.readthedocs.io/
    Source Code = https://github.com/piwheels/hostedpi
    Issue Tracker = https://github.com/piwheels/hostedpi/issues
keywords = raspberrypi, mythicbeasts, picloud, piwheels
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Topic :: Utilities
    License :: OSI Approved :: BSD License
license_files = LICENSE.txt

[options]
packages = find:
python_requires = >=3.7
install_requires =
    setuptools
    requests

[options.extras_require]
doc =
    sphinx
    sphinx-rtd-theme

[options.entry_points]
console_scripts =
    hostedpi = hostedpi.cli:main
